# Hermes-nextcloud-talk

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.hermes/plans/: 2026-07-11_171746-nextcloud-talk-hermes-gateway.md
src/hermes_nextcloud_talk/: __init__.py  app.py  authorization.py  cli.py  config.py  idempotency.py  parser.py  processor.py  profile_runner.py  runtime.py  session_router.py  signing.py  talk_client.py
tests/: test_app.py  test_authorization.py  test_config.py  test_parser.py  test_processor.py  test_profile_runner.py  test_runtime.py  test_session_router.py  test_signing.py  test_talk_client.py
